more twig templating

--- a/admin/css/admin-buttons.less
+++ b/admin/css/admin-buttons.less
@@ -2,6 +2,8 @@
 
 #fontsampler-admin {
     .button {
+        clear: both;
+        border: 0;
         border-radius: 0;
         box-shadow: none;
         font-weight: bold;
@@ -9,7 +11,7 @@
 
         &.button-primary {
             background: @fs_color_ok_light;
-            color: @fs_color_text;
+            color: @fs_color_white;
         }
 
         &.delete {
