--- a/includes/fontsets.twig
+++ b/includes/fontsets.twig
@@ -1,7 +1,7 @@
 {% extends 'layout.twig' %}
 
 {% block content %}
-<h1>Font sets &amp;amp; files</h1>
+<h1>Font sets & files</h1>
 
 {% if not fonts %}
 
