--- a/includes/pagination.twig
+++ b/includes/pagination.twig
@@ -1,9 +1,11 @@
 {% if pagination %}
 <nav class="fontsampler-pagination">
+	<ul>
 	{% for page in pagination %}
-		<a data-target="fontsampler-admin-tbody-ajax"
+		<li><a data-target="fontsampler-admin-tbody-ajax"
 	    {% if page.is_current %} class="fontsampler-pagination-current-page" {% endif %}
-		href="{{ page.url|raw }}">{{ page.label|raw }}</a>
+		href="{{ page.url|raw }}">{{ page.label|raw }}</a></li>
 	{% endfor %}
+	</ul>
 </nav>
 {% endif %}
