--- a/admin/css/fontsampler-admin.css
+++ b/admin/css/fontsampler-admin.css
@@ -162,10 +162,11 @@
 }
 #fontsampler-admin #fontsampler-menu ul li a {
   border: 1px solid #fff;
+  background: #f2f2f2;
   border-radius: 0;
   border-bottom: 0;
   box-shadow: none;
-  color: #4a4a4a;
+  color: #008ec2;
   display: inline-block;
   font-weight: bold;
   padding: 0.5em 1em;
@@ -178,20 +179,20 @@
 }
 #fontsampler-admin #fontsampler-menu ul li a:hover,
 #fontsampler-admin #fontsampler-menu ul li a:focus {
-  background: #008ec2;
-  border: 1px solid #006799;
+  background: #64caf0;
+  border: 1px solid #64caf0;
   border-bottom: 0;
   color: #fff;
 }
-#fontsampler-admin #fontsampler-menu ul li.current {
-  background: #008ec2;
-}
 #fontsampler-admin #fontsampler-menu ul li.current a {
+  background: #008ec2;
   border: 1px solid #008ec2;
   border-bottom: 0;
   color: #ffffff;
 }
 #fontsampler-admin .button {
+  clear: both;
+  border: 0;
   border-radius: 0;
   box-shadow: none;
   font-weight: bold;
@@ -199,7 +200,7 @@
 }
 #fontsampler-admin .button.button-primary {
   background: #64caf0;
-  color: #222222;
+  color: #ffffff;
 }
 #fontsampler-admin .button.delete {
   background: #e5604e;
@@ -250,12 +251,6 @@
   font-weight: bold;
   padding: 0 0.5em;
 }
-#fontsampler-admin table {
-  border-collapse: collapse;
-  border-spacing: 0;
-  width: 100%;
-  margin: 1em auto 2em;
-}
 #fontsampler-admin table,
 #fontsampler-admin thead,
 #fontsampler-admin tbody,
@@ -265,6 +260,14 @@
   text-align: left;
   vertical-align: middle;
 }
+#fontsampler-admin table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  margin: -1em auto 0;
+  border: 4px solid #f2f2f2;
+  padding: 4px;
+}
 #fontsampler-admin th,
 #fontsampler-admin td {
   padding: 0.25em 0.5em;
@@ -273,10 +276,15 @@
   border-bottom: 1px solid #fafafa;
 }
 #fontsampler-admin th {
-  border-bottom: 1px solid #999;
-  font-weight: normal;
+  background: #f2f2f2;
+  font-weight: bold;
   font-size: larger;
+  text-transform: uppercase;
   vertical-align: top;
+}
+#fontsampler-admin th small {
+  font-weight: normal;
+  text-transform: none;
 }
 #fontsampler-admin p {
   font-size: inherit;
@@ -558,31 +566,43 @@
 #fontsampler-admin.fontsampler-admin-show-legacy-formats .fontsampler-admin-legacy-format {
   display: table-row;
 }
-#fontsampler-admin .fontsampler-pagination {
-  margin: 1em auto;
+#fontsampler-admin .fontsampler-pagination ul {
+  margin: 0 auto;
+  display: inline-block;
+  background: #f2f2f2;
+  padding: 1em 0.5em;
+}
+#fontsampler-admin .fontsampler-pagination ul li {
+  display: inline-block;
 }
 #fontsampler-admin .fontsampler-pagination a {
-  background: #eee;
-  border: 1px solid #eee;
-  color: #888;
+  background: #ffffff;
+  border: 0;
+  color: #008ec2;
+  font-weight: bold;
   text-decoration: none;
   text-transform: uppercase;
   margin: 0 0.25em;
   padding: 0.25em 0.75em;
   outline: none;
   box-shadow: none;
-  border-radius: 3px;
+  border-radius: 0;
   letter-spacing: 2px;
 }
 #fontsampler-admin .fontsampler-pagination a.fontsampler-pagination-current-page {
-  color: #008ec2;
-  background: #eee;
-  border: 1px solid #ccc !important;
+  color: #ffffff;
+  background: #008ec2;
 }
 #fontsampler-admin .fontsampler-pagination a:hover,
 #fontsampler-admin .fontsampler-pagination a:focus {
-  border: 1px solid #008ec2;
-  color: #006799;
+  background: #64caf0;
+  color: #ffffff;
+}
+#fontsampler-admin .fontsampler-pagination + table {
+  margin-top: -1em;
+}
+#fontsampler-admin table + .fontsampler-pagination {
+  margin-bottom: 1em;
 }
 #fontsampler-admin .fontsampler-options.ui-accordion-disabled h3 {
   color: #cccccc !important;
