--- a/includes/header.twig
+++ b/includes/header.twig
@@ -1,9 +1,9 @@
 <header id="fontsampler-menu">
 	<ul>
-		<li {{ is_current('sets') }}>
+		<li {{ is_current('index,set_edit,set_delete,set_create') }}>
 			<a href="?page=fontsampler">Font samplers</a>
 		</li>
-		<li {{ is_current('fonts') }}>
+		<li {{ is_current('fonts,font_edit,font_delete,font_create') }}>
 			<a href="?page=fontsampler&amp;subpage=fonts">Fonts &amp; files</a>
 		</li>
 		<li {{ is_current('settings') }}>
