--- a/includes/fontset-edit.twig
+++ b/includes/fontset-edit.twig
@@ -1,14 +1,18 @@
-<h1><?php echo ! empty( $font['id'] ) ? 'Edit this font set' : 'Upload new font files'; ?></h1>
+{% extends 'layout.twig' %}
+
+{% block content %}
+<h1>{% if font.id is not empty %} Edit this font set {% else %} Upload new font files {% endif %}</h1>
+
 <form method="post" enctype="multipart/form-data" action="?page=fontsampler&amp;subpage=fonts" id="fontsampler-fontset-from" class="fontsampler-validate">
 	<input type="hidden" name="action" value="edit_font">
-	<?php if ( function_exists( 'wp_nonce_field' ) ) : wp_nonce_field( 'fontsampler-action-edit_font' ); endif; ?>
-	<input type="hidden" name="id" value="<?php echo empty( $font['id'] ) ? 0 : $font['id']; ?>">
+	{{ wp_nonce_field( 'fontsampler-action-edit_font' )|raw }}
+	<input type="hidden" name="id" value="{% if font.id is empty %}0{% else %}{{ font.id }}{% endif %}">
 
 	<h2>Font name</h2>
 	<p>Supply this mostly to make it able for you to tell different fonts apart for when you pick them
 		into a font sampler. (e.g. "MyFont Regular Italic")</p>
 
-	<?php include('fontset-fonts.php'); ?>
+	{{  include('fontset-fonts.twig', { font: font }) }}
 
 	<p>The supplied files will be used to render the actual font sampler. Note that you don't have to
 		provide all formats. Supplying at the very least the <code>woff</code> formats will
@@ -20,6 +24,11 @@
 	<p><small>Note further more that these files will be stored in your Wordpress Uploads folder. Once uploaded,
 		you can re-use the same files also for defining other font sets and reuse them in any number of font sets and
 		font samplers.</small></p>
-	<?php if ( empty( $font['id'] ) ) : submit_button( 'Upload' );
-	else : submit_button( 'Update' ); endif; ?>
+	{% if font.id is empty %}
+		{{ submit_button('Upload') }}
+	{% else %}
+		{{ submit_button('Update') }}
+	{% endif %}
 </form>
+
+{% endblock %}
