--- a/admin/css/admin-header.less
+++ b/admin/css/admin-header.less
@@ -23,7 +23,7 @@
                 background: @fs_color_white;
 
                 a {
-                    border: 1px solid #fff;
+                    border: 0;
                     background: @fs_color_light;
                     border-radius: 0;
                     border-bottom: 0;
@@ -34,6 +34,7 @@
                     padding: 0.5em 1em;
                     text-decoration: none;
                     outline: none;
+                    transition: background 0.15s ease-in-out;
 
                     &:active {
                         background: @fs_color_white !important;
@@ -42,7 +43,6 @@
 
                     &:hover, &:focus {
                         background: @fs_color_ok_light;
-                        border: 1px solid @fs_color_ok_light;
                         border-bottom: 0;
                         color: #fff;
                     }
@@ -51,7 +51,6 @@
                 &.current {
                     a {
                         background: @fs_color_link;
-                        border: 1px solid @fs_color_link;
                         border-bottom: 0;
                         color: @fs_color_white;
                     }
