--- a/includes/about.twig
+++ b/includes/about.twig
@@ -1,3 +1,6 @@
+{% extends('layout.twig') %}
+
+{% block content %}
 <h1>Font sampler</h1>
 <h2>Created by</h2>
 <p>The Fontsampler Wordpress plugin is brought to you by digital designer, developer and type enthusiast <a
@@ -42,3 +45,4 @@
 			author)</a> (<a href="https://github.com/kontur/jquery-fontsampler/blob/master/LICENSE.txt">License</a>)
 	</li>
 </ul>
+{% endblock %}
