More DB restructuring and twig tweaks, getting set and fonts form functionality back working

--- a/includes/fontsampler-option-feature-label.twig
+++ b/includes/fontsampler-option-feature-label.twig
@@ -3,7 +3,7 @@
     <div>
         <label class="fontsampler-radio">
             <input type="radio" name="{{ label }}_use_default" value="0"
-            {% if use_default %} checked="checked" {% endif %}>
+            {% if not use_default %} checked="checked" {% endif %}>
         </label>
         <label>
             <span class="setting-description">{{ description }}</span>
