--- a/includes/fontsampler-options.twig
+++ b/includes/fontsampler-options.twig
@@ -3,9 +3,9 @@
 	<div>
 		<label>
 			<input type="checkbox" name="{{ label }}"
-			    data-default="{% if defaults.label is not empty %} checked {% endif %}"
-			    data-set="{% if set.label is not empty %} checked{% endif %}"
-				{% if set.label is not empty %} checked="checked" {% endif %}>
+			    data-default="{{ defaults[label] }}"
+			    data-set="{{ set[label] }}"
+				{% if set[label] == 1 %} checked="checked" {% endif %}>
 			<span>{{ f.label }}</span>
 		</label>
 		<button class="fontsampler-toggle-show-hide fontsampler-button-link">
@@ -13,39 +13,40 @@
 			<span>Hide details</span>
 		</button>
 		<div class="fontsampler-options-features-details {#fontsampler-visible#}">
+
 			{{ include('fontsampler-option-feature-label.twig', {
-				use_default: set.id is empty,
+				use_default: set[f.name ~ '_label'] is empty,
 				label: label,
 				name: f.name,
 				description: f.slider_label,
-				default: (set[f.name ~ '_label'])
+				default: (defaults[f.name ~ '_label'])
 			}) }}
 
 			{{ include('fontsampler-option-feature-slider.twig', {
-				use_default: set.id is empty,
+				use_default: set[f.name ~ '_min'] is empty,
 				header: 'Minimum',
 				label: (label ~ '_min'),
 				slider_label: f.slider_min_label,
 				slider_name: (f.name ~ '_min_value'),
-				slider_default: (set[f.name ~ '_min'])
+				slider_default: (defaults[f.name ~ '_min'])
 			}) }}
 
 			{{ include('fontsampler-option-feature-slider.twig', {
-				use_default: set.id is empty,
+				use_default: set[f.name ~ '_initial'] is empty,
 				header: 'Initial',
 				label: (label ~ '_initial'),
 				slider_label: f.slider_initial_label,
 				slider_name: (f.name ~ '_initial_value'),
-				slider_default: (set[f.name ~ '_initial'])
+				slider_default: (defaults[f.name ~ '_initial'])
 			}) }}
 
 			{{ include('fontsampler-option-feature-slider.twig', {
-				use_default: set.id is empty,
+				use_default: set[f.name ~ '_max'] is empty,
 				header: 'Maximum',
 				label: (label ~ '_max'),
 				slider_label: f.slider_max_label,
 				slider_name: (f.name ~ '_max_value'),
-				slider_default: (set[f.name ~ '_max'])
+				slider_default: (defaults[f.name ~ '_max'])
 			}) }}
 		</div>
 	</div>
@@ -55,9 +56,9 @@
 	<div>
 		<label>
 			<input type="checkbox" name="{{ label }}"
-			       data-default="{% if defaults.label is not empty %} 'checked' {% endif %}"
-			       data-set="{% if options.label is not empty %} 'checked' {% endif %}"
-				   {% if options.label is not empty %} checked="checked" {% endif %}>
+			       data-default="{{ defaults[label] }}"
+			       data-set="{{ set[label] }}"
+				   {% if set[label] is not empty %} checked="checked" {% endif %}>
 			<span>{{ description }}</span>
 		</label>
 	</div>
