--- a/includes/set-edit.twig
+++ b/includes/set-edit.twig
@@ -13,10 +13,9 @@
 	<h2>Fonts</h2>
 	{% if fonts is not empty %}<p>Pick which font sets to use, or upload your fontsampler's fonts now:</p>{% endif %}
 
-	<input type="hidden" name="fonts_order" value="<?php if ( ! empty( $fonts_order ) ) : echo $fonts_order; endif; ?>">
+	<input type="hidden" name="fonts_order" value="{% if fonts_order is not empty %}{{ fonts_order }}{% endif %}">
 	<ul id="fontsampler-fontset-list">
 		{% if set.id is not empty and set.fonts is not empty %}
-			set.id not empty and set.fonts not empty
 			{% for setfont in set.fonts %}
 				<li>
 					<span class="fontsampler-fontset-sort-handle">&varr;</span>
@@ -24,7 +23,7 @@
 						<option value="0">-pick from existing-</option>
 						{#for each dropdown loop print out all fonts and if the current font is in the set, select it#}
 						{% for font in fonts %}
-							<option {% if setfont in font %} selected="selected" {% endif %}value="{{ font.id }}">
+							<option {% if setfont in fonts and setfont.id == font.id %} selected="selected" {% endif %}value="{{ font.id }}">
 								{{ font.name }}
 							</option>
 						{% endfor %}
@@ -44,7 +43,6 @@
 				</li>
 			{% endfor %}
 		{% elseif set.id is empty and fonts is not empty %}
-			set.id empty and fonts not empty
 			<li>
 				<!-- for a new fontset, display one, non-selected, select choice -->
 				<span class="fontsampler-fontset-sort-handle">&varr;</span>
@@ -265,8 +263,11 @@
 	{#</div>#}
 	{#<br>#}
 
-
-	{{ submit_button('Save new Fontsampler') }}
+	{% if set.id is not empty %}
+		{{ submit_button('Save changes') }}
+	{% else %}
+		{{ submit_button('Save new Fontsampler') }}
+	{% endif %}
 </form>
 
 
@@ -278,9 +279,9 @@
 			<span class="fontsampler-fontset-sort-handle">&varr;</span>
 			<select name="font_id[]">
 				<option value="0">-pick from existing-</option>
-				<?php foreach ( $fonts as $font ) : ?>
-					<option value="<?php echo $font['id']; ?>"><?php echo $font['name']; ?></option>
-				<?php endforeach; ?>
+				{% for font in fonts %}
+					<option value="{{ font.id }}">{{ font.name }}</option>
+				{% endfor %}
 			</select>
 			<button class="btn btn-small fontsampler-fontset-remove"
 			        title="Remove this fontset from sampler">&minus;</button>
@@ -298,10 +299,7 @@
 			<span class="fontsampler-fontset-sort-handle">&varr;</span>
 
 			<div class="fontsampler-fontset-inline-wrapper">
-				<?php
-				unset( $font );
-				include( 'fontset-fonts.php' );
-				?>
+				{% include 'fontset-fonts.twig' %}
 				<small style="float: left;">Uploading at the very least a <code>woff</code> file is recommended.
 					You can later edit the files of this fontset in the
 					<a href="?page=fontsampler&subpage=fonts">Fonts &amp; Files</a> tab.
